<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#DADADA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#DADADA">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:src="@drawable/sushi_roll"
            android:contentDescription="@string/image_of_the_food_item" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_description"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Price_Unit"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/price_text_view"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def_price"
                android:textSize="14sp"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
