<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#DADADA">

    <!-- Food item details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/foodimage"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@drawable/sushi_roll"
            android:contentDescription="@string/image_of_the_food_item" />
        <TextView
            android:id="@+id/food_item_name"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:padding="16dp"
            android:textSize="24sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/price_unit"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:text="@string/Price_Unit"
                android:padding="16dp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/food_item_price"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:padding="16dp"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Quantity picker -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/decrement_quantity_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/decrement_quantity_button"
                android:padding="8dp"
                android:src="@drawable/ic_minus" />

            <TextView
                android:id="@+id/quantity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/_1"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/increment_quantity_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/increment_quantity_button"
                android:padding="8dp"
                android:src="@drawable/ic_plus" />

        </LinearLayout>
        <!-- Order button -->
        <Button
            android:id="@+id/order_button"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="16dp"
            android:text="@string/Order_btn"
            />
    </LinearLayout>
</LinearLayout>